<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main_menu.MainMenuFragment">


    <TextView
        android:id="@+id/tvGameName"
        style="@style/Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_big"
        android:gravity="center"
        android:text="@string/game_name"
        app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
        app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGameRules"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/game_rules"
        app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
        app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvGameName" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:text="@string/start_game"
        app:layout_constraintBottom_toTopOf="@+id/tvBestScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameRules" />

    <TextView
        android:id="@+id/tvBestScore"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_small"
        android:gravity="center"
        android:text="@string/best_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalLeftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_vertical_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalRightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_vertical_margin" />
</androidx.constraintlayout.widget.ConstraintLayout>