<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.result.ResultFragment">

    <TextView
        android:id="@+id/tvResultScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:gravity="center"
        android:text="@string/game_score"
        style="@style/Header"
        app:layout_constraintBottom_toTopOf="@+id/tvBestScore"
        app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBestScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/best_score"
        style="@style/Header"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
        app:layout_constraintEnd_toEndOf="@+id/tvResultScore"
        app:layout_constraintStart_toStartOf="@+id/tvResultScore"
        app:layout_constraintTop_toBottomOf="@+id/tvResultScore" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_small"
        android:text="@string/play_again"
        app:layout_constraintBottom_toTopOf="@+id/btnMenu"
        app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
        app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizontalCenterGuideline" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_small"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="@+id/btnPlayAgain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnPlayAgain"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayAgain" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalCenterGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalLeftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_vertical_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalRightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_vertical_margin" />
</androidx.constraintlayout.widget.ConstraintLayout>